--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/jonat/wpilib/user/java/lib/Pathfinder-Java-1.8.jar" sourcepath="C:/Users/jonat/wpilib/user/java/lib/Pathfinder-Java-1.8-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/1129975/wpilib/user/java/lib/Pathfinder-Java-1.8.jar" sourcepath="C:/Users/1129975/wpilib/user/java/lib/Pathfinder-Java-1.8-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/1129975/wpilib/user/java/lib/Pathfinder-Java-1.8-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
